2010-01-13  Kent Hansen  <kent.hansen@nokia.com>

        Reviewed by Timothy Hatcher.

        Some objects in the global scope are not completed
        https://bugs.webkit.org/show_bug.cgi?id=19119

        Use Object.getOwnPropertyNames instead of for-in to provide completions, since
        Object.getOwnPropertyNames reports both enumerable and non-enumerable properties.

        * inspector/front-end/InjectedScript.js:
        (InjectedScript._getPropertyNames):
        (InjectedScript.getCompletions):

2010-01-13  Ben Murdoch  <benm@google.com>

        Reviewed by Simon Hausmann.

        [Android] [Qt] The JSC ScriptController does not consider Touch Events user gestures.
        https://bugs.webkit.org/show_bug.cgi?id=33597

        * bindings/js/ScriptController.cpp:
        (WebCore::ScriptController::processingUserGestureEvent): Add the touch event types (touchstart, touchmove and touchend) to the set of events that are considered user gestures.

2010-01-13  Simon Hausmann  <simon.hausmann@nokia.com>

        Rubber-stamped by Tor Arne Vestbø.

        [Qt] REGRESSION(53187) Touchevent related tests fail

        https://bugs.webkit.org/show_bug.cgi?id=33602

        Pass the ENABLE_TOUCH_EVENTS to the IDL generators.

        * WebCore.pri:

2010-01-13  Ilya Tikhonovsky  <loislo@chromium.org>

        Reviewed by Pavel Feldman.

        WebInspector: Timeline panel scrolling speed can be increased.
        https://bugs.webkit.org/show_bug.cgi?id=33579

        * inspector/front-end/TimelinePanel.js:
        (WebInspector.TimelinePanel):
        (WebInspector.TimelinePanel.prototype._scheduleRefresh):
        (WebInspector.TimelinePanel.prototype._refresh):
        (WebInspector.TimelinePanel.prototype._refreshRecords):

2010-01-13  Jocelyn Turcotte  <jocelyn.turcotte@nokia.com>

        Reviewed by Simon Hausmann.

        [Qt] Split the build process in two different .pro files.
        This allows qmake to be run once all source files are available.